5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1643_2446.log
== TEST (2019-04-14 10:13:01) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
print()
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:13:13) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
print(c1)
-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:17:24) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(ct)
-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:19:10) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c4)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:19:39) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c3)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:20:07) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c3)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:20:13) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c2)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:20:32) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c2)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:20:38) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c1 -c2)//10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c1)
-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:23:16) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c2)%10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c3)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:23:36) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c2)%10
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c2)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:23:47) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c2)%100
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c2)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:23:57) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c2)%100
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c3)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:24:04) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = (c2)%100
c4 = (c1 - c2)%10
ct = c2 + c3 + c4
print(c3)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:24:34) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100


-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:26:15) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
print(c1)


-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:26:22) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
print(c1)


-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:26:30) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
print(c2)


-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:28:13) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c4 = (c1%10)//10
print(c4)


-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:29:24) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c4 = (c1%10)
print(c4)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:29:47) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c4 = (c1%1)
print(c4)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:30:00) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c4 = (c1%10)
print(c4)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:33:14) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c2*100)-(c1))//10
c4 = (c1%10)
print(c3)


-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:33:26) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c2*100)-(-c1))//10
c4 = (c1%10)
print(c3)


-- OUTPUT:
121
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:33:42) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((-c2*100)-(c1))//10
c4 = (c1%10)
print(c3)


-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:34:10) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)
print(c3)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:35:56) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = senha - c1
print(p)


-- OUTPUT:
87000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:36:48) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)/1000
print(p)


-- OUTPUT:
87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:37:46) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
print(p1)


-- OUTPUT:
87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:39:37) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p1%10
print(p1)


-- OUTPUT:
87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:39:46) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p1%10
print(p2)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:39:52) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p1%10
print(p2)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:39:59) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p1%10
print(p3)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:40:26) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p1%10
print(c4)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:41:54) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
print(p3)


-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:42:40) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)
print(c1)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10




-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:50:57) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)
ct = p2 + c2 + c4

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3

if  (ct//pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ct = p2 + c2 + c4
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:51:29) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3
ct = p2 + c2 + c4

if  (ct//pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:51:37) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3
ct = p2 + c2 + c4

if  (ct//pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:51:44) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3
ct = p2 + c2 + c4

if  (ct//pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:55:00) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3
ct = p2 + c2 + c4

if  (ct//pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:56:18) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3
ct = p2 + c2 + c4

if  (ct//pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:56:47) 
-- CODE:
senha = int(input("digite a senha: "))
c1 = (senha%1000)
c2 = c1//100
c3 = ((c1)-(c2*100))//10
c4 = (c1%10)

p = (senha - c1)//1000
p1 = p//100
p2 = ((p)- (p1*100))//10
p3 = p%10
pt = p1 + p3 + c3
ct = p2 + c2 + c4

if  (ct%pt == 0):
	  print("acesso liberado")
		
else:
	 print("senha invalida")






-- EXECUTION TIME:
0.136991
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
